src/operations/authorship/snapshots/git_ai__operations__authorship__rebase_authorship__tests__with_out_of_band_commits.snap
---
source: src/operations/authorship/rebase_authorship.rs
expression: authorship_log
---
AuthorshipLogV3 {
    attestations: [],
    metadata: AuthorshipMetadata {
        schema_version: "authorship/3.0.0",
        base_commit_sha: "",
        prompts: {},
    },
}
